Add browser interface for Csound playback