@@ -1,36 +1,37 @@
 # Java + Csound 7
 
-Projeto Java mínimo que carrega a biblioteca nativa do Csound 7, instancia o
-engine e produz no dispositivo de áudio uma senoide de 440 Hz por 2 segundos.
+Aplicação Java mínima com uma interface web que aciona o Csound 7 nativo e
+produz no dispositivo de áudio uma senoide de 440 Hz por 2 segundos.
 
-O acesso à API C é feito com a Foreign Function & Memory API, nativa desde o
-Java 22. Não há dependências Java em tempo de execução.
+O browser chama um endpoint HTTP local; o processo Java instancia e controla o
+engine pela Foreign Function & Memory API, nativa desde o Java 22. Não há
+dependências Java em tempo de execução.
 
 ## Pré-requisitos
 
 - JDK 22 ou mais recente;
 - Csound 7 instalado;
-- a pasta de `csound64.dll` (Windows), `libcsound64.so`/`libcsound.so` (Linux)
-  ou `libcsound64.dylib` (macOS) disponível no caminho de bibliotecas do sistema.
+- a biblioteca nativa do Csound disponível no caminho do sistema.
 
-## Executar sem Maven
+## Executar
 
 No PowerShell:
 
 ```powershell
-javac --release 22 -d out src/main/java/dev/example/Main.java
-java --enable-native-access=ALL-UNNAMED -cp out dev.example.Main
+.\run.cmd
 ```
 
-Se a biblioteca não estiver no caminho padrão, informe o arquivo explicitamente:
+Abra <http://localhost:8080> e clique em **Tocar 440 Hz**. Use `Ctrl+C` no
+terminal para encerrar o servidor.
+
+O script compila a aplicação, copia a página para o classpath, localiza a DLL
+do Csound e inicia o servidor. Se a DLL não for localizada automaticamente,
+defina antes seu caminho completo:
 
 ```powershell
-java --enable-native-access=ALL-UNNAMED `
-  -Dcsound.library.path="C:\caminho\para\csound64.dll" `
-  -cp out dev.example.Main
+$env:CSOUND_LIBRARY_PATH = "D:\Program Files\Csound7\bin\csound64.dll"
+.\run.cmd
 ```
 
-Também é possível compilar com `mvn package` e executar a classe da mesma forma,
-usando `target/classes` no classpath.
-
-O volume do oscilador está em `0.2` para evitar uma saída excessivamente alta.
+O servidor escuta somente em `127.0.0.1`, portanto não fica exposto para outras
+máquinas da rede. O volume do oscilador está em `0.2`.
